--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,9 @@
 <h1>Recent VR News</h1>
 
-<h3>{title}</h3>
-<a href="{link}">Link to article</a>
-<p>{summary}</p>
+{{#each article}}
+<h3>{{title}}</h3>
+<a href="{{link}}">Link to article</a>
+<p>{{summary}}</p>
+{{/each}}
 <br>
-<p>{comments}</p>
+<p>{{comments}}</p>
