--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <link rel="stylesheet" href="assets/css/style.css">
+   <link rel="stylesheet" href="/assets/css/style.css">
    <title>Web Scraper App</title>
 </head>
 <body>
@@ -12,6 +12,6 @@
 
    {{!-- Scripts --}}
    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-   <script src="assets/js/script.js"></script>
+   <script src="/assets/js/script.js"></script>
 </body>
 </html>
