--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <h1>Recent VR News</h1>
 
-{{#each article}}
+{{#each articles}}
    <h3>{{title}}</h3>
    <a href="{{link}}">Link to article</a>
    <p>{{summary}}</p>
