--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,20 +1,10 @@
-<h1>Recent VR News</h1>
+<h1>Recent VR News <button id="refresh-articles"> Refresh Articles</button></h1>
 
+<div class="article">
 {{#each articles}}
    <h3>{{title}}</h3>
    <a href="{{link}}">Link to article</a>
    <p>{{summary}}</p>
    <i>{{date}}</i>
-<div class="comment-box">
-   <p><a href="/article/{{_id}}">Show all comments</a></p>
-   {{#if comment}}
-      {{#each comment}}
-         <p>{{comment}}</p>
-         <i>{{commenter}} | {{date}}</i>
-      {{/each}}
-   {{else}}
-      <p>No Comments...</p>
-      <i>commenter | date</i>
-   {{/if}}
-</div>
 {{/each}}
+</div>
