--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,6 @@
    <h3>{{title}}</h3>
    <a href="{{link}}">Link to source</a>
    <p>{{summary}}</p>
-   <a href="/article/{{_id}}">Show comments</a>
-   <i>{{date}}</i>
+   <a href="/article/{{_id}}">Show comments</a> - <i>{{date}}</i>
 {{/each}}
 </div>
